tests/NormalTests/paczka1/fuzzy1/38750335.err
Error in line 3: qwHlCoU1Yn A408 91,7
Error in line 7: qwHlCoU1Yn S284 22,4
Error in line 9: qwHlCoU1Yn A408 87,0
Error in line 5: 20ghGRGePb A408 34,8
Error in line 22: qwHlCoU1Yn A547 25,6
Error in line 27: weA7At A547 -n,9
Error in line 20: 20ghGRGePb A547 2,2
